--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,17 @@
 body{
-	tex-align: center;
+	text-align: center;
 	font-family: "Arial";
-	color: pink;
+	color: #333;
+	font-size:16px;
+}
+#container{
+	width:70%;
+	padding:1em;
+	text-align: left;
+	border: 1px solid #000;
+	margin: 0 auto;
 }
 
+#container h1{
+	 font-size: 20px;
+}
