--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,9 @@
 body{
+	background: #1e1f24;
 	text-align: center;
 	font-family: "Arial";
 	color: #777;
-	font-size:16px;
+	font-size:20px;
 }
 
 #cabecera{
@@ -11,8 +12,12 @@ body{
 	color: white;
 	font-weight: bold;
 	margin: 0;
-	padding: 0.5em;
+	padding: 0.5em 0 .5em 2em;
 
+}
+#cabecera #logo{
+	width:26px;
+	vertical-align: middle;
 }
 #cabecera #tagline{
 	padding:  0 0 0 1em;
@@ -26,6 +31,7 @@ body{
 	text-align: left;
 	border: 1px solid #000;
 	margin: 0 auto;
+	background: #FFF;
 }
 
 #container h1{
